clear db and change relationships. some templates

--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -27,7 +27,7 @@
                         </div>
                         <div class="control-group">
                             <div class="controls">
-                                <button type="submit" class="btn btn-motive btn-form">Опубликовать</button>
+                                <button type="submit" class="btn btn-motive btn-form">создать</button>
                             </div>
                         </div>
                     </form>
