--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -38,7 +38,7 @@
 
     <div class="control-group">
         <div class="controls">
-          <button type="submit" class="btn btn-motive btn-form">Опубликовать</button>
+          <button type="submit" class="btn btn-motive btn-form">добавить</button>
         </div>
     </div>
   </form>
