--- a/templates/home.html
+++ b/templates/home.html
@@ -104,7 +104,7 @@
                     Добавляйте посты и продукты, обменивайтесь своим опытом, узнайте много нового.
                     Вам сюда, если вы хотите развиваться как специалист. Но если для вас аквариумистика - не род занятий,
                     а удивительное и интересное исскуство, то на этом форуме вы сможете пообщаться с людьми, которых объединяет с вами любимое дело.
-                    Форум аквариуистики - это сообщестыво, где вы сможете найти друзей и соратников.
+                    Форум аквариумистики - это сообщество, где вы сможете найти друзей и соратников.
 
                 </p>
             </div>
