--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -20,7 +20,7 @@
                                 {{ form.file(id="file", class="inputfile", data_multiple_caption="{count} files selected") }}
                                 <label for="file" class="hand-cursor">
                                     <span class="photo_text hidden-xs ct-u-size24"><i class="fa fa-camera ct-u-size30"
-                                                                                      aria-hidden="true"></i> Select image</span>
+                                                                                      aria-hidden="true"></i> Выбрать изображение</span>
 
                                 </label>
                             </div>
