--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,8 @@
 <script type="text/javascript" src="{{ url_for ('static', filename= "js/bootbox.min.js") }}"></script>
 <script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}" acync></script>
     <script type="text/javascript" src="{{ url_for ('static', filename= "js/file_form.js") }}" acync></script>
+        <script type="text/javascript" src="{{ url_for ('static', filename= "js/autosize.min.js") }}" acync></script>
+
 
 <script>
     $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
