--- a/templates/home.html
+++ b/templates/home.html
@@ -99,14 +99,19 @@
     <div class="ct-u-positionRelative">
         <div class="ct-pageSectionHeader ct-offsetTop25 ct-u-borderBottomGrayLighter">
             <h4 class="ct-fw-300 ct-u-size40 ct-u-paddingBottom20">Узнайте больше о любимом хобби -  <span>Аквариумистике</span></h4>
-            <div class="ct-u-paddingBottom40">
-                <p class="text-justify">
-                    Добавляйте посты и продукты, обменивайтесь своим опытом, узнайте много нового.
-                    Вам сюда, если вы хотите развиваться как специалист. Но если для вас аквариумистика - не род занятий,
-                    а удивительное и интересное исскуство, то на этом форуме вы сможете пообщаться с людьми, которых объединяет с вами любимое дело.
-                    Форум аквариумистики - это сообщество, где вы сможете найти друзей и соратников.
 
+                <p class="text-justify">
+                    Аквариумное дело - это создание нового особого мира. Это ответственно, но очень интересно.
+                    Конечно, для начинающего аквариумиста самым сложным на первых этапах будет запуск аквариума,
+                    ведь это сложная маленькая экосистема, в которые все связано между собою до мельчайших деталей.
+                    Если вы ищете совет, или у вас есть какие то сомнения - достаточно написать об этом пост с вопросом.
                 </p>
+                <p>
+Для некоторых аквариумистика - это любимое и интересное хобби, для других же - профессиональное дело.
+                Форум аквариумистики - это место, где собираются и знатоки, и любители.
+                   </p>
+
+
             </div>
         </div>
     </div>
@@ -161,7 +166,30 @@
     </div>
         </div>
 
+
+
+
     </section>
+
+    <div class="container">
+    <p>
+        Почему аквариумное дело так интересно? Ответов много, ведь это действительно многогранное искусство,
+                и каждый может найти в нем что-то для своего развития и удовлетворения.
+            </p>
+
+    <p>
+
+Почему аквариумистика так интересна? Ответов много, ведь это действительно многогранное искусство,
+                и каждый может найти в нем что-то для своего развития и удовлетворения.
+            </p>
+        <p>
+Ведь что, как не создание аквариума может позволить вам ощутить себя творцом нового собственного мира.
+                Кроме того, как утверждают многие психологи, аквариум в доме способствует созданию особой атмосферы,
+                в которой царит гармония и  спокойствие. Для некоторых аквариумистика интересна й тем,
+                что наблюдение за красивыми рыбками благотворно влияет на психику, помогает снять напряжение.
+
+                </p>
+</div>
 
 <script>
 $(document).ready(function() {
