--- a/templates/confirm_email.html
+++ b/templates/confirm_email.html
@@ -4,9 +4,9 @@
 <section class="ct-errorText text-center text-uppercase  ct-u-paddingTop0 ct-u-paddingBottom100">
     <div class="container">
 
-        <p class="ct-u-size28 ct-u-paddingTop20 ct-u-paddingBottom40">
-            На ваш Е-mail было отправилено письмо с потверждением.
-            Пожалуйста, кликнете на ссылку в письме, что-бы завершить регистрацию
+        <p class="ct-u-size20 ct-u-paddingTop20 ct-u-paddingBottom40">
+            На ваш Е-mail было отправилено письмо с подтверждением.
+            Пожалуйста, кликните на ссылку в письме, что-бы завершить регистрацию
         </p>
 
     </div>
