--- a/templates/single_post.html
+++ b/templates/single_post.html
@@ -5,7 +5,7 @@
     <section class="ct-u-paddingBottom10">
         <div class="container">
 
-        <div class="ct-pageSectionHeader ct-u-paddingBoth30">
+        <div class="ct-pageSectionHeader ct-u-paddingBoth30 padding-title">
 
                     <h3 class="text-uppercase ct-u-size30 text-center">{{ post.title }}</h3>
 
@@ -44,7 +44,7 @@
                             {{ post.published_at|datetime }}
 
                         </p>
-                        <p>
+                        <p class="text-line">
                             {{ post.body }}
                         </p>
                     </div>
@@ -284,7 +284,7 @@
                                 <img class="img-circle left-image" src="{{ url_for('uploaded_file',filename= post.image )}}" style="height:50px">
 
                             {% else %}
-                                <img class="img-circle left-image" src="{{ url_for('uploaded_file',filename="carusel4.jpg" )}}" style="height:50px">
+                                <img class="img-circle left-image" src="{{ url_for('static',filename="image/carusel4.jpg" )}}" style="height:50px">
 
                             {% endif %}
                             <div class="description side">
