--- a/templates/user.html
+++ b/templates/user.html
@@ -223,7 +223,7 @@
                                 <img class="img-circle left-image" src="{{ url_for('uploaded_file',filename= post.image )}}" style="height:50px">
 
                             {% else %}
-                                <img class="img-circle left-image" src="{{ url_for('uploaded_file',filename="carusel4.jpg" )}}" style="height:50px">
+                                <img class="img-circle left-image" src="{{ url_for('static',filename="image/carusel4.jpg" )}}" style="height:50px">
 
                             {% endif %}
                             <div class="description side">
