--- a/templates/confirm_email.html
+++ b/templates/confirm_email.html
@@ -6,7 +6,7 @@
 
         <p class="ct-u-size20 ct-u-paddingTop20 ct-u-paddingBottom40">
             На ваш Е-mail было отправилено письмо с подтверждением.
-            Пожалуйста, кликните на ссылку в письме, что-бы завершить регистрацию
+            Пожалуйста, кликните на ссылку в письме, чтобы завершить регистрацию
         </p>
 
     </div>
