--- a/templates/single_post.html
+++ b/templates/single_post.html
@@ -248,6 +248,17 @@
                 </div>
                 </div>
                 <div class="col-xs-12 col-sm-3 col-sm-offset-1 sidebar">
+                <div class="ct-inputSearch ct-u-marginBottom30">
+                        <form style="display: inline;" action="{{url_for('search')}}" method="post" name="search">
+                            {{g.search_form.hidden_tag()}}
+                            {{g.search_form.search(size=20,type="text", placeholder="Поиск...")}}
+
+
+                        <button class="" type="submit"><i class="fa fa-search"></i></button>
+
+                        </form>
+                    </div>
+
                     <div class="ct-inputSearch ct-u-marginBottom40">
                         <div class="panel-group">
                             <div class="panel panel-default">
@@ -272,9 +283,15 @@
                         </div>
                     </div>
                     </div>
+                     <h4 class="text-uppercase ct-fw-600 ct-u-paddingBottom10 ct-u-borderBottomGrayLighter">Посты по тегам</h4>
+                    <ul class="ct-simpleList list-unstyled ct-u-paddingTop5 ct-u-paddingBottom30">
+                        {% for t in tags %}
+                <li><a href="{{url_for('search_results', query = t.name, only_tag=True)}}"><i class="fa fa-hashtag" ></i>{{ t.name }}</a></li>
+                        {% endfor %}
 
-                    <h4 class="text-uppercase ct-fw-600 ct-u-paddingBottom15 ct-u-borderBottomGrayLighter">Последние посты</h4>
-                    <ul class="ct-mediaList list-unstyled ct-u-paddingTop10 ct-u-paddingBottom40">
+                    </ul>
+                    <h4 class="text-uppercase ct-fw-600 ct-u-borderBottomGrayLighter">Последние посты</h4>
+                    <ul class="ct-mediaList list-unstyled ct-u-paddingBottom30">
 
                         {% for post in posts %}
                             <li>
@@ -302,8 +319,8 @@
 
 
                 </ul>
-                <h4 class="text-uppercase ct-fw-600 ct-u-paddingBottom15 ct-u-borderBottomGrayLighter">Новые комментарии</h4>
-                <ul class="ct-simpleList list-unstyled ct-u-paddingTop10 ct-u-paddingBottom40">
+                <h4 class="text-uppercase ct-fw-600  ct-u-borderBottomGrayLighter">Новые комментарии</h4>
+                <ul class="ct-simpleList list-unstyled ct-u-paddingTop10 ct-u-paddingBottom30">
                     {% for comment in comments  %}
                     <li><i class="fa fa-chevron-right"></i>{{ comments_relationships[comment.id]["author"].username }} в <a href="#"><span>{{ post.title }}</span></a></li>
                     {% endfor %}
