--- a/templates/base.html
+++ b/templates/base.html
@@ -229,7 +229,7 @@
                 <div class="ct-list ct-list--dark">
                     <h5 class="text-uppercase ct-fw-600 ct-u-motiveBody">Найдите нас</h5>
                     <ul class="ct-u-paddingTop10">
-                        <li><a href="https://www.facebook.com/createITpl"><div class="ct-listTable"><div class="ct-ListDiamond"><i class="fa fa-facebook"></i></div></div><span>Facebook</span></a></li>
+                        <li><a href="#"><div class="ct-listTable"><div class="ct-ListDiamond"><i class="fa fa-facebook"></i></div></div><span>Facebook</span></a></li>
                         <li><a href="#"><div class="ct-listTable"><div class="ct-ListDiamond"><i class="fa fa-linkedin"></i></div></div><span>Linkedin</span></a></li>
                     </ul>
                 </div>
