--- a/templates/security/email/welcome.html
+++ b/templates/security/email/welcome.html
@@ -1,18 +1,10 @@
-
-<p>Добро пожаловать! Спасибо за регистрацию. Пожалуйста, кликните на эту ссылку, чтобы завершить регистрацию :</p>
+<p>Добро пожаловать! Спасибо за регистрацию. Пожалуйста, кликните на эту ссылку, чтобы завершить регистрацию</p>
 <p>
-{{confirmation_link}}
-{{welkom_link}}
-{{confirm_email}}
+<a href="{{confirmation_link}}">Подтвердить регистрацию</a>
+
 </p>
 <br>
 <p>Cheers!</p>
-
-
-
-
-
-
 
 
 
