--- a/templates/single_product.html
+++ b/templates/single_product.html
@@ -158,7 +158,7 @@
                         {{form.hidden_tag()}}
 
                         <div class="form-group col-xs-9 col-sm-9">
-                            {{form.text(class_="form-control", rows=2)}}
+                            {{form.text(class_="form-control", rows=2, placeholder="Оставить комментарий...")}}
 
                         </div>
                         <div id ="hide" class="form-group col-xs-3 col-sm-2">
