--- a/templates/user.html
+++ b/templates/user.html
@@ -42,6 +42,18 @@
 
 
         <div class="col-xs-12 col-sm-6" id=user_about>
+         {% if current_user == user %}
+             {% if not user.confirmed_at %}
+                 <p>
+                 На ваш електронный адрес {{ current_user.email }} было отправлено письмо
+            с инструкциями по активации вашего аккаунта.
+
+Пожалуйста, кликните на ссылку, указанную в письме, чтобы подтвердить електронную почту и активировать ваш аккаунт.
+
+                 </p>
+             {% endif %}
+        {% endif %}
+
             {% if user.last_seen %}
                 <p><i>Был онлайн: {{ user.last_seen }}</i></p>
             {% endif %}
